RESOLVED FIXED174769
[iOS WK2] 5 DataInteractionTests are failing: observed selection rects after dropping don't match expected values
https://bugs.webkit.org/show_bug.cgi?id=174769
Summary [iOS WK2] 5 DataInteractionTests are failing: observed selection rects after ...
Wenson Hsieh
Reported 2017-07-23 20:32:58 PDT
Attachments
Patch (5.81 KB, patch)
2017-07-23 21:11 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-07-23 21:11:03 PDT
Wenson Hsieh
Comment 2 2017-07-23 22:38:04 PDT
Comment on attachment 316261 [details] Patch Thanks Tim!
WebKit Commit Bot
Comment 3 2017-07-23 23:05:21 PDT
Comment on attachment 316261 [details] Patch Clearing flags on attachment: 316261 Committed r219795: <http://trac.webkit.org/changeset/219795>
WebKit Commit Bot
Comment 4 2017-07-23 23:05:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.